# academic-pape-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  dep-policy.yaml  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: ci.yml
academic_paper/: chunker.py  config.py  db.py  embedder.py  extractor.py  hybrid.py  llm.py  server.py  summarizer.py  telemetry.py  vector_store.py
tests/: test_chunker.py  test_db.py  test_db_fts.py  test_embedder.py  test_extractor.py  test_hybrid.py  test_llm.py  test_search.py  test_server.py  test_summarizer.py  test_summary_endpoint.py  test_vector_store.py
